skip tests depending on GPU when running on GH actions server

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build and test DNG Processor
-      run: cd dng && mvn install && cd ..
+      run: cd dng && mvn install '-Dtest=!de.unituebingen.opengl.**' && cd ..
     - name: Compile and package CLI
       run: cd cli && mvn package && cd ..
     - name: Compile and package GUI
